<resources>
    <string name="app_name">My First Application</string>
    <string name="division">Division</string>
    <string name="multiply">Multiply</string>
    <string name="substract">Substract</string>
    <string name="add">Add</string>
    <string name="enter_the_no_2">Enter the no-2</string>
    <string name="enter_the_no_1">Enter the no-1</string>
    <string name="answer">Answer</string>
    <string name="result">Result :</string>
    <string name="calculator">Calculator</string>
    <string name="equals">=</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_in">Sign-in</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_btn">Sign-in</string>

</resources>