<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/calculator" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/calculator"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="232dp"
        android:layout_height="66dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_the_no_1"
        android:inputType="text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_the_no_2"
        android:inputType="text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btadd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/btsub"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/substract" />

    <Button
        android:id="@+id/btmul"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/btdiv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:text="@string/division" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="23dp"
            android:text="@string/result"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/answer"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>